# ros-crystalfontz

./: CMakeLists.txt  README.md  package.xml
bash/: install.sh
config/: default.yaml  driver_default.yaml  logic_default.yaml
example script folder/example scripts/: non-propagating.sh  propagating.sh
example_script_folder/example scripts/: runs_for_ever.sh
example_script_folder/no scripts in here/: stdout.txt
include/: cf_packet.h  comms.h  serial.h  show_packet.h  typedefs.h
include/node/: DriverNode.hpp  LogicNode.hpp
launch/: driver.launch  logic.launch
src/: cf_packet.cpp  crystalfontz_driver.cpp  crystalfontz_logic.cpp  crystalfontz_logic_test.cpp  driver_main.cpp  logic_main.cpp  serial.cpp  show_packet.cpp
